# until

./: README.md
android/app/: build.gradle
android/app/src/main/kotlin/com/example/until/: MainActivity.kt
app/: pubspec.yaml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/profile/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/lib/: main.dart
app/lib/src/screens/: feed.dart  splashScreen.dart
app/lib/src/service/: event_provider.dart  prefs.dart
app/lib/src/util/: until_colors.dart  util.dart
app/web/: index.html  manifest.json
ios/Runner.xcodeproj/: project.pbxproj
lib/src/models/: event.dart
lib/src/util/: style.dart
lib/src/widgets/: event_container.dart
server/: Cargo.toml
server/src/: main.rs
test/: widget_test.dart
